--- a/yes_style.css
+++ b/yes_style.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #F8C8DC;
+    background-color: #C8F2F8;
 }
 
 /* Position the "No" button absolutely within body */
@@ -51,7 +51,7 @@ body {
 }
 
 .btn {
-    background-color: #FFB6C1;
+    background-color: #C8F2F8;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -65,7 +65,7 @@ body {
 }
 
 .btn:hover {
-    background-color: #FAF9F6;
+    background-color: #F6F6Fa;
 }
 
 .gif_container {
